--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.bytedeco.javacpp-presets:systems-platform:1.4.4'
+    implementation 'org.bytedeco:systems-platform:1.5.8'
     implementation 'net.java.dev.jna:jna-platform:5.3.1'
     implementation 'com.github.jnr:jnr-ffi:2.1.9'
 }
