--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.bytedeco:systems-platform:1.5.8'
     implementation 'net.java.dev.jna:jna-platform:5.13.0'
     implementation 'com.github.jnr:jnr-ffi:2.2.13'
+	implementation 'com.nativelibs4java:bridj:0.7.0'
 }
 
 // foreign stuff is in preview now, not incubating
